# restic-manager

./: .gitignore  CLAUDE.md  Cargo.toml  DEPLOY-CHECKLIST.md  DEPLOYMENT-ISSUES.md  DEPLOYMENT.md  FUTURE-SESSION-GUIDE.md  IMPLEMENTATION-SUMMARY.md  Makefile  README.md  RESTIC-MANAGEMENT.md  RESTORE.md  SETUP.md  SNAPSHOTS.md  STATUS-VERIFY.md  TEST-GUIDE.md  TESTING.md  TODO.md  config.example.toml  deploy-simple.sh  deploy.sh  production-config.toml  run-tests.sh
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
.serena/: project.yml
restic-manager-tests/: Cargo.toml
restic-manager-tests/src/: config_builder.rs  fixtures.rs  lib.rs  test_context.rs
restic-manager-tests/tests/commands/: list.rs  mod.rs  restic_binary.rs  restore.rs  run.rs  setup.rs  snapshots.rs  status.rs  validate.rs  verify.rs
restic-manager-tests/tests/integration/: common.rs  docker_volumes.rs  mod.rs  postgres.rs
restic-manager-tests/tests/unit/: config.rs  docker.rs  mod.rs  restic.rs
src/: lib.rs  main.rs
src/config/: loader.rs  mod.rs  types.rs
src/managers/: backup.rs  logging.rs  mod.rs  notification.rs
src/strategies/: generic.rs  mod.rs
src/utils/: command.rs  cron.rs  docker.rs  docker_ops.rs  executor.rs  locker.rs  mod.rs  restic.rs  restic_installer.rs  restic_ops.rs
tests/: README.md  config_tests.rs  integration_automated.rs  snapshots_test.rs
tests/container/: Dockerfile  README.md  cleanup.sh  config.toml  docker-compose.yml  entrypoint.sh  setup.sh
tests/integration/: README.md  cleanup.bat  cleanup.sh  config.toml  docker-compose.yml  setup.bat  setup.sh
