[workspace]
members = [".", "restic-manager-tests"]
resolver = "2"

[package]
name = "restic-manager"
version = "0.1.0"
edition = "2021"

[lib]
name = "restic_manager"
path = "src/lib.rs"

[[bin]]
name = "restic-manager"
path = "src/main.rs"

[dependencies]
# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# Async runtime (for concurrent operations and HTTP)
tokio = { version = "1.35", features = ["full"] }

# HTTP client (for Discord webhooks and restic downloads)
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Date/time
chrono = "0.4"

# File locking
fd-lock = "4.0"

# Utilities
dirs = "5.0"
which = "6.0"
zip = "2.2"
bzip2 = "0.4"
dialoguer = "0.11"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
# Docker testing
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["postgres", "mysql"] }
# Test utilities
rstest = "0.18"
serial_test = "3.0"
mockall = "0.12"
